fix: spacing between lis

--- a/mdi-react/src/components/Colored-Containers.module.scss
+++ b/mdi-react/src/components/Colored-Containers.module.scss
@@ -63,22 +63,18 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-  }
-
-  .textBox ul {
-    list-style-type: none;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    li {
-      list-style-image: url("../images/Leaf_small.png");
-      margin-left: 2rem;
-      margin-bottom: 1rem;
-      font-weight: bold;
-      color: $primary-dark;
-      img {
-        margin-right: 2rem;
+    ul {
+      list-style-type: none;
+      padding: 0;
+      li {
+        list-style-image: url("../images/Leaf_small.png");
+        margin-left: 2rem;
+        margin-bottom: 1rem;
+        font-weight: bold;
+        color: $primary-dark;
+      }
+      :last-child {
+        margin-bottom: 1.5rem;
       }
     }
   }
